[project]
name = "practise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent>=0.1.3",
    "chainlit>=2.5.5",
    "gradio>=6.5.1",
    "httpx>=0.28.1",
    "openai>=1.90.0",
    "openai-agents>=0.0.19",
    "oxylabs>=2.0.0",
    "oxylabs-ai-studio>=0.2.20",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "sdk>=1.0.0",
]
